<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.qixils.crowdcontrol.plugin</groupId>
    <artifactId>minecraft-crowd-control</artifactId>
    <version>3.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>paper</module>
        <module>sponge-7</module>
    </modules>

    <name>Minecraft Crowd Control: Parent</name>
    <description>Allows viewers to interact with your Minecraft server</description>
    <url>https://github.com/qixils/minecraft-crowdcontrol</url>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
<!--        <maven.compiler.release>${java.version}</maven.compiler.release>-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <adventure.version>4.9.3</adventure.version>
        <cloud.version>1.6.0</cloud.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.0.1-jre</version>
        </dependency>
        <dependency>
            <groupId>dev.qixils.crowdcontrol</groupId>
            <artifactId>crowd-control-receiver</artifactId>
            <version>3.3.1</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>${adventure.version}</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <version>${adventure.version}</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>${adventure.version}</version>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-core</artifactId>
            <version>${cloud.version}</version>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-minecraft-extras</artifactId>
            <version>${cloud.version}</version>
        </dependency>
    </dependencies>
</project>
